Cambio de fuente en el texto del carrusel

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11120,3 +11120,7 @@ a.text-dark:focus {
 .bg-rojo-pastel {
   background-color: #ff6962;
 }
+
+.texto-carrusel {
+  font-family: 'Handlee', cursive;
+}
