Correcciones de la Home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11106,19 +11106,19 @@ a.text-dark:focus {
 }
 
 .bg-azul-pastel {
-  background-color: #60c9ff;
+  background-color: #66D7D1;
 }
 
 .bg-verde-pastel {
-  background-color: #a3d46c;
+  background-color: #BDECB6;
 }
 
 .bg-morado-pastel {
-  background-color: #776ec5;
+  background-color: #A18594;
 }
 
 .bg-rojo-pastel {
-  background-color: #ff6962;
+  background-color: #FF637D;
 }
 
 .texto-carrusel {
