--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11200,3 +11200,29 @@ border:1px solid #ECECEC;
   width: 100%;
   height: 100%;
 }
+
+
+.precio-tachado del {
+    color: rgba(255,0,0, 0.5);
+    text-decoration: none;
+    position: relative;
+}
+.precio-tachado del:before {
+      content: " ";
+      display: block;
+      width: 100%;
+      border-top: 2px solid ;
+      border-top-color: rgba(255,0,0, 0.8);
+      height: 12px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      transform: rotate(-7deg);
+  
+}
+.precio-tachado  ins {
+    color: #1eaaf1;
+    font-size: 32px;
+    text-decoration: none;
+    padding: 1em 1em 1em .5em;
+}
