--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11121,9 +11121,11 @@ a.text-dark:focus {
   background-color: #FF637D;
 }
 
-.texto-carrusel {
+.texto-carrusel, .texto-servicios {
   font-family: 'Handlee', cursive;
 }
+
+
 
 .shadow-effect {
   background: #fff;
